# online-news-classification

./: .env  .gitignore  EN analysis.txt  README.md  pyproject.toml
data/labels/: cc-labels.txt  ua-labels.txt
notebooks/: Roberta results.txt  bert baseline qualitative analysis.txt  epochs_15.csv  epochs_25.csv  epochs_3.csv  milestone1.ipynb  milestone2-bert-improved.ipynb  milestone2-tibor-ivan.ipynb  milestone2-tibor.ipynb  milestone2-traditional_ml_methods.ipynb  milestone2.ipynb  milestone2_baseline_bert.ipynb  milestone2_bert_hierarchical.ipynb  milestone2_improved_bert.ipynb  milestone2_roberta.ipynb  multilanguage-bert-subnaratives.ipynb  multilanguage-bert-unfrozen.ipynb  multilanguage-bert.ipynb  raw_epochs_15.csv  raw_epochs_25.csv  raw_epochs_3.csv  subnaratives_epochs_15.csv  subnaratives_epochs_3.csv
results/: Roberta results.txt  bert baseline qualitative analysis.md
src/tuwnlp/: dataset.py  utils.py
test/: test_dataset.py
tuw-nlp2024/: utils.py
tuwnlp/: dataset.py  utils.py
