[tool.poetry]
name = "tuw-nlp2024"
version = "0.1.0"
description = ""
authors = ["Tibor Cus <cus.tibor@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.9.2"
numpy = "^2.1.2"
pandas = "^2.2.3"
tqdm = "^4.66.5"
scikit-learn = "^1.5.2"
nltk = "^3.9.1"
stanza = "^1.9.2"
torch = "^2.5.0"


[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
