[tool.poetry]
name = "tuw-nlp2024"
version = "0.1.0"
description = ""
authors = ["Tibor Cus <cus.tibor@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
matplotlib = "^3.9.2"
numpy = "1.26.0"
pandas = "^2.2.3"
tqdm = "^4.66.5"
scikit-learn = "^1.5.2"
nltk = "^3.9.1"
stanza = "^1.9.2"
torch = "^2.5.0"
spacy = "3.7.5"
pyproject-toml = "^0.0.10"


[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
